Fix collapse first click bug. Turn Social button into collapse toggle

--- a/app/assets/stylesheets/room_profile.css.scss
+++ b/app/assets/stylesheets/room_profile.css.scss
@@ -300,7 +300,8 @@ div.profile_info_name{
   font-size:16px;
   font-weight:normal;
   text-transform:uppercase;
-  width:100%
+  width:100%;
+  padding-left:4px;
 }
 // #profile_home_wrapper 
 table.generalGrid{
